# CADmium

./: .git-blame-ignore-revs  .gitignore  .npmrc  .prettierignore  .prettierrc  Cargo.toml  LICENSE  Notes.md  README.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.cjs  turbo.json  vercel_build.sh  vite.config.js
.devcontainer/: devcontainer.json
.devcontainer/scripts/: on-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e-tests.yml
applications/tauri/: Cargo.toml  tauri.conf.json
applications/web/: .eslintrc.cjs  .gitignore  .prettierrc  .prettierrc.json  index.html  package.json  svelte.config.js  (+8 more)
cadmium/: Cargo.toml
src/: app.css  app.html  app.postcss  typeGuards.ts  types.d.ts
src/rust/cadmium/: CADmium.code-workspace  Cargo.toml  test.step
src/rust/cadmium/src/: extrusion.rs  lib.rs  main.rs  project.rs  sketch.rs  test.rs
src/rust/cadmium/src/sketch/: intersections.rs  mod.rs  svg.rs
src/rust/cadmium/src/test_inputs/: circle_crashing_2.cadmium  line_through_many_rectangles.cadmium  line_through_rectangle.cadmium  lots_of_nesting.cadmium  nested_circles.cadmium  nested_squares.cadmium  three_adjacent_faces.cadmium  two_Es.cadmium
src/rust/cadmium/src/test_inputs/sketches/circle_circle/: four_circles_chained.cadmium  three_circles.cadmium  two_circles_two_intersections.cadmium
src/rust/cadmium/src/test_inputs/sketches/circle_line/: circle_quadrangle.cadmium  circle_rect_changing_size.cadmium  circle_rect_circle.cadmium  one.cadmium  two.cadmium
(+176 files in other folders)
