[package]
name = "cadmium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
truck-meshalgo = "0.3.0"
truck-modeling = "0.5.1"
truck-shapeops = "0.3.0"
truck-polymesh = "0.5.0"
truck-topology = "0.5.0"
serde_json = "1.0.107"
serde = "1.0.188"
itertools = "0.11.0"

[lib]
crate-type = ["cdylib", "rlib"]
