[package]
name = "cadmium"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mattferraro/cadmium"
authors = ["Matt Ferraro"]
description = "A CAD program written in Rust with a JS front end"
license = "Elastic License 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
truck-meshalgo = "0.3.0"
truck-modeling = "0.5.1"
truck-shapeops = "0.3.0"
truck-polymesh = "0.5.0"
truck-topology = "0.5.0"
truck-stepio = "0.2.0"
serde_json = "1.0.107"
serde = "1.0.188"
itertools = "0.11.0"
svg = "0.13.1"
geo = "0.26.0"
serde_with = "3.4.0"
crc32fast = "1.3.2"
indexmap = "2.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
